<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Paznokiec</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="welcome">Witamy w aplikacji !!!</string>
	<string name="zadbaj">Już dziś zadbaj o swoje paznokcie !</string>
	<string name="wejdz">Wejdź</string>
	<string name="Tekst2">Wybierz stan paznokci:</string>
	<string name="kolor1">Żółty</string>
	<string name="kolor2">Biały</string>
	<string name="kolor3">Szaroniebieski</string>
	<string name="kolor4">Brązowy</string>
	<string name="kolor5">Zielony</string>
	<string name="kolor6">Czarny</string>
	<string name="kolor7">Rozdwojenie</string>
	<string name="kolor8">Zanikanie płytki</string>
	<string name="kolor9">Łamliwe i kruche</string>
	<string name="kolor10">Pogrubienie płytki</string>
	<string name="kolor11">Wgłębienia</string>
	<string name="kolor12">Matowienie</string>
	<string name="kolor13">Bruzdy</string>
	<string name="kolor14">Łyżeczkowaty kształt</string>
	<string name="kolor15">Uwypuklenie płytki</string>
	<string name="kolor16">Szponowaty kształt</string>
	<string name="kolor17">Zwinięcie w rulonik</string>
	<string name="kolor18">Grzybica</string>
	<string name="kolor19">Drożdżyca</string>
	<string name="kolor20">Zanokcica</string>
	<string name="kolor21">Łuszczyca</string>
	<string name="kolor22">Onychioza</string>
	<string name="dalej2">Dalej</string>
	<string name="listapyt">Odpowiedz na pytania w celu ustalenia przyczyny:</string>
	<string name="nr1">1.</string>
	<string name="nr2">2.</string>
	<string name="nr3">3.</string>
	<string name="nr4">4.</string>
	<string name="nr5">5.</string>
	<string name="nr6">6.</string>
	<string name="nr7">7.</string>
	<string name="tak">TAK</string>
	<string name="nie">NIE</string>
	<string name="zolte1">Czy pali Pan/Pani papierosy ?</string>
	<string name="zolte2">Czy przyjmuje Pan/Pani leki powodujące taki efekt uboczny ?</string>
	<string name="zolte3">Czy choruje Pan/Pani na łuszczyce ?</string>
	<string name="zolte4">Czy choruje Pan/Pani na grzybicę ?</string>
	<string name="zolte5">Czy choruje Pan/Pani na żółtaczkę ?</string>
	<string name="zolte6">Czy często maluje Pani paznokcie na czerwono bez lakieru bazowego ?</string>
	<string name="zdjecie">Wgraj zdjęcie</string>
	<string name="przyczyny">Przyczyny choroby paznokci:</string>
	<string name="dziekujemy">Dziękujemy za skorzystanie z aplikacji !</string>
	<string name="przejdz">Przejdź do innej choroby</string>
	<string name="koniec">Wyjdź z aplikacji</string>
	<string name="biale1">Czy ma Pan/Pani małe, białe punkciki na paznokciach ?</string>
	<string name="biale2">Czy cała płytka paznokcia jest przebarwiona na biało ?</string>
	<string name="biale3">Czy ma Pan/Pani niewydolność serca lub niewydolność nerek ?</string>
	<string name="biale4">Czy jest Pan/Pani na diecie ?</string>
	<string name="biale5">Czy spożywa Pan/Pani produkty bogate w wapń, cynk lub białko ?</string>
	<string name="szaroniebieskie1">Czy zażywa Pan/Pani leki, których skutkiem ubocznym jest szaroniebieski kolor paznokcia ?</string>
	<string name="szaroniebieskie2">Czy przechodził/a Pan/Pani ostatnio zatrucie pokarmowe ?</string>
	<string name="szaroniebieskie3">Czy ma Pan/Pani zaburzenia krążenia obwodowego ?</string>
	<string name="szaroniebieskie4">Czy ma Pan/Pani zaburzenia metabolizmu miedzi ?</string>
	<string name="brazowy1">Czy pali Pan/Pani papierosy ?</string>
	<string name="brazowy2">Czy przyjmuje Pan/Pani leki powodujące taki efekt uboczny ?</string>
	<string name="brazowy3">Czy choruje Pan/Pani na tarczycę ?</string>
	<string name="brazowy4">Czy jest Pan/Pani na diecie ?</string>
	<string name="zielony1">Czy ma Pan/Pani wykryte zakażenie bakteryjne ?</string>
	<string name="zielony2">Czy usuwał/a Pan/Pani ostatnio naskórki ?</string>
	<string name="zielony3">Czy posiada Pan/Pani niewielkie skaleczenia na dłoniach ?</string>
	<string name="zielony4">Czy miał/a Pan/Pani kontakt z zanieczyszczeniami ?</string>
	<string name="zielony5">Czy miał/a Pan/Pani kontakt z bakteriami ?</string>
	
</resources>
