<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="842dp"
    android:background="@drawable/yellowgradient"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="false"
        android:textStyle="bold"
        android:layout_marginTop="44dp"
        android:text="@string/Tekst2" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="26dp" >

        <RadioButton
            android:id="@+id/radioz5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/kolor1" />

        <RadioButton
            android:id="@+id/radioz4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor2" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor3" />

        <RadioButton
            android:id="@+id/radioz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor4" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor5" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor6" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor7" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor8" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor9" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor10" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor11" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor12" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor13" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor14" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor15" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor16" />

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor17" />

        <RadioButton
            android:id="@+id/radioButton14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor18" />

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor19" />

        <RadioButton
            android:id="@+id/radioButton16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor20" />

        <RadioButton
            android:id="@+id/radioButton17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor21" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kolor22" />
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/radioGroup1"
        android:text="@string/dalej2" />

</RelativeLayout>

</ScrollView>