<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellowgradient"
     >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/listapyt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="14dp"
        android:text="@string/nr1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/szaroniebieskie1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/szaroniebieskie2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/szaroniebieskie3" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignLeft="@+id/textView9"
        android:text="@string/biale5"
        android:visibility="invisible"
         />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignRight="@+id/textView7"
        android:layout_below="@+id/textView2"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tak" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nie" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_toLeftOf="@+id/textView3"
        android:text="@string/nr2" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="14dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radiobialy0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tak" />

        <RadioButton
            android:id="@+id/radiobialy1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nie" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup2"
        android:layout_toLeftOf="@+id/textView3"
        android:text="@string/nr3" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_below="@+id/textView7"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radiobialy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tak" />

        <RadioButton
            android:id="@+id/radiobialy3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nie" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/radioGroup3"
        android:text="@string/nr4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView10"
        android:layout_alignLeft="@+id/textView7"
        android:text="@string/szaroniebieskie4" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radiobialy4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tak" />

        <RadioButton
            android:id="@+id/radiobialy5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nie" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="41dp"
        android:layout_toLeftOf="@+id/textView3"
        android:text="@string/nr5"
        android:visibility="invisible"
         />

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:orientation="horizontal" >
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView11"
        android:layout_below="@+id/radioGroup5"
        android:layout_marginTop="14dp"
        android:orientation="horizontal" >
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView7"
        android:layout_below="@+id/radioGroup6"
        android:text="@string/dalej2" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignLeft="@+id/textView10"
        android:text="@string/zdjecie" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/button2"
        android:layout_marginLeft="46dp"
        android:layout_toLeftOf="@id/button2"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>
